test/Fail/SyntaxForOperators.agda
module SyntaxForOperators where

postulate _+_ : Set → Set → Set

syntax _+_ A B = A ⊎ B
