test/Fail/SyntaxForOperators.err
SyntaxForOperators.agda:5.22: error: [ParseError]
Syntax declarations are allowed only for simple names (without holes)
